# tiny-regex-rs

./: .gitignore  Cargo.toml  Readme.md  rough_bench.sh  timings  tiny_regex_c_tests.sh
src/: cffi.rs  lib.rs
tests/: handmade.rs
