[package]
name = "tiny_regex_rs"
version = "0.1.0"
authors = ["Greg Morenz <morenzg@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[[example]]
name = "tiny_regex_rs"
path = "src/cffi.rs"
crate_type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
debug = []